--- a/packages/starlight/components/RightSidebarPanel.astro
+++ b/packages/starlight/components/RightSidebarPanel.astro
@@ -6,7 +6,8 @@
 
 <style>
 	.right-sidebar-panel {
-		padding: 1rem var(--sl-sidebar-pad-x);
+		padding: 2rem var(--sl-sidebar-pad-x);
+		/* padding: 1rem var(--sl-sidebar-pad-x); */
 	}
 	.right-sidebar-panel + .right-sidebar-panel {
 		border-top: 1px solid var(--sl-color-hairline);
