--- a/packages/starlight/components/Sidebar.astro
+++ b/packages/starlight/components/Sidebar.astro
@@ -1,6 +1,7 @@
 ---
 import type { getSidebar } from '../utils/navigation';
-import LanguageSelect from './LanguageSelect.astro';
+// import LanguageSelect from './LanguageSelect.astro';
+import Search from './Search.astro';
 import SidebarSublist from './SidebarSublist.astro';
 import ThemeSelect from './ThemeSelect.astro';
 
@@ -13,17 +14,28 @@ const { sidebar, locale } = Astro.props;
 ---
 
 <div class="sidebar sl-flex">
+	<div class="sidebar__header sidebar__header_sm">
+		<ThemeSelect {locale} />
+		<Search {locale} />
+	</div>
+	<div class="sidebar__header sidebar__header_xl">
+		<Search {locale} />
+		<ThemeSelect {locale} />
+	</div>
+
+	<!--  -->
 	<SidebarSublist sublist={sidebar} />
+	<!--
 	<div class="mobile-preferences sl-flex md:sl-hidden">
 		<ThemeSelect {locale} />
-		<LanguageSelect {locale} />
-	</div>
+	</div> -->
 </div>
 
 <style>
 	.sidebar {
 		height: 100%;
-		padding: 1rem var(--sl-sidebar-pad-x);
+		padding: 0.3rem var(--sl-sidebar-pad-x) 1rem;
+		/* padding: 1rem var(--sl-sidebar-pad-x); */
 		flex-direction: column;
 		gap: 1rem;
 	}
@@ -37,6 +49,44 @@ const { sidebar, locale } = Astro.props;
 	@media (min-width: 50rem) {
 		.sidebar > :global(:nth-last-child(2)) {
 			padding-bottom: 1rem;
+		}
+	}
+
+	/* Custom */
+	.sidebar__header {
+		display: none;
+		gap: 1rem;
+	}
+
+	.sidebar__header_sm {
+		display: grid;
+		grid-template-columns: 60px 1fr;
+	}
+
+	.sidebar__header :global(select) {
+		outline: none;
+		padding-top: 0.4rem !important;
+		padding-left: 0.3rem;
+		padding-bottom: 0.4rem !important;
+	}
+
+	@media (min-width: 50rem) {
+		.sidebar {
+			padding: 1rem var(--sl-sidebar-pad-x) !important;
+		}
+
+		.sidebar__header_sm {
+			display: none;
+		}
+
+		.sidebar__header_xl {
+			display: grid;
+			grid-template-columns: 1fr 60px;
+		}
+
+		.sidebar__header :global(select) {
+			padding-left: 0;
+			padding-top: 0.5rem;
 		}
 	}
 </style>
