--- a/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
+++ b/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
@@ -36,7 +36,8 @@ const t = useTranslations(locale);
 	nav {
 		position: fixed;
 		z-index: var(--sl-z-index-toc);
-		top: calc(var(--sl-nav-height) - 1px);
+		top: 0;
+		/* top: calc(var(--sl-nav-height) - 1px); */
 		inset-inline: 0;
 		border-top: 1px solid var(--sl-color-gray-5);
 		background-color: var(--sl-color-bg-nav);
