--- a/packages/starlight/components/ThemeSelect.astro
+++ b/packages/starlight/components/ThemeSelect.astro
@@ -12,8 +12,7 @@ const t = useTranslations(Astro.props.locale);
 <starlight-theme-select>
 	{/* TODO: Can we give this select a width that works well for each language’s strings? */}
 	<Select
-		icon="laptop"
-		label={t('themeSelect.accessibleLabel')}
+		iconHide
 		value="auto"
 		options={[
 			{ label: t('themeSelect.dark'), selected: false, value: 'dark' },
@@ -26,7 +25,7 @@ const t = useTranslations(Astro.props.locale);
 
 {/* Inlined to avoid FOUC. Uses global scope from `ThemeProvider.astro` */}
 <script is:inline>
-	StarlightThemeProvider.updatePickers();
+StarlightThemeProvider.updatePickers();
 </script>
 
 <script>
